# aws-fis-newbie

./: .envrc.sample  .gitignore  .terraform.lock.hcl  README.md  alb.tf  ec2.tf  fis.tf  output.tf  provider.tf  pyproject.toml  rds.tf  run_web.bash  terraform.tf  variable.tf  vpc.tf  web.py
templates/: user_data.bash
web/: README.md  run_web.bash  web.py
